k8s/zigbee2mqtt-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
spec:
  replicas: 1
  serviceName: zigbee2mqtt
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        service: domoticz
        app: zigbee2mqtt
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - node2
      volumes:
        - name: zigbee2mqtt-local-storage-storage
          persistentVolumeClaim:
            claimName: zigbee2mqtt-on-k8s-local-storage-claim
        - name: ttyusb0
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice
      terminationGracePeriodSeconds: 30
      containers:
        - name: zigbee2mqtt
          startupProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            tcpSocket:
              port: 1890
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 1890
            timeoutSeconds: 3
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 60
            successThreshold: 1
            tcpSocket:
              port: 1890
            timeoutSeconds: 3
          image: koenkk/zigbee2mqtt:1.24.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1890
              name: zigbee2mqtt
          securityContext:
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
            privileged: true
          volumeMounts:
            - mountPath: /app/data
              name: zigbee2mqtt-local-storage-storage
            - mountPath: /dev/ttyUSB0
              name: ttyusb0
          resources:
            limits:
              memory: 80Mi
            requests:
              memory: 60Mi
