k8s/domoticz-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: domoticz
spec:
  ports:
    - name: gui
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: domoticz
    service: domoticz
