k8s/kustomize-mqtt-broker-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: domoticz
  name: domoticz-mqtt-broker
spec:
  loadBalancerIP: 192.168.1.10
