k8s/mqtt-broker-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: domoticz
  name: domoticz-mqtt-broker
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.11
  ports:
    - name: unencrypted
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: websockets
      port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: domoticz-mqtt-broker
    service: domoticz
