k8s/zigbee2mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  ports:
    - name: gui
      protocol: TCP
      port: 1890
      targetPort: 1890
  selector:
    app: zigbee2mqtt
    service: domoticz
